      they are going to be used with root privileges, not just the default
      configuration file.

DW/24 Bugzilla 1044: CVE-2010-4345 - part three: remove ALT_CONFIG_ROOT_ONLY
      option (effectively making it always true).

DW/25 Add TRUSTED_CONFIG_PREFIX_FILE option to allow alternative configuration
      files to be used while preserving root privileges.


Exim version 4.72
-----------------

JJ/01 installed exipick 20100104.1, adding $max_received_linelength,
      $data_path, and $header_path variables; fixed documentation bugs and
      typos

JJ/02 installed exipick 20100222.0, added --input-dir and --finput to allow
      exipick to access non-standard spools, including the "frozen" queue
      (Finput)

NM/01 Bugzilla 965: Support mysql stored procedures.
      Patch from Alain Williams

NM/02 Bugzilla 961: Spacing fix (syntax error) on Makefile directives for NetBSD

NM/03 Bugzilla 955: Documentation fix for max_rcpts.
      Patch from Andreas Metzler

NM/04 Bugzilla 954: Fix for unknown responses from Dovecot authenticator.
      Patch from Kirill Miazine

NM/05 Bugzilla 671: Added umask to procmail example.

JJ/03 installed exipick 20100323.0, fixing doc bug

NM/06 Bugzilla 988: CVE-2010-2023 - prevent hardlink attack on sticky mail
      directory.  Notification and patch from Dan Rosenberg.

TK/01 PDKIM: Upgrade PolarSSL files to upstream version 0.12.1.

TK/02 Improve log output when DKIM signing operation fails.

MH/01 Treat the transport option dkim_domain as a colon separated
      list, not as a single string, and sign the message with each element,
      omitting multiple occurences of the same signer.

NM/07 Null terminate DKIM strings, Null initialise DKIM variable
      Bugzilla 985, 986.  Patch by Simon Arlott

NM/08 Bugzilla 967. dnsdb DNS TXT record bug fix (DKIM-related)
      Patch by Simon Arlott

PP/01 Bugzilla 989: CVE-2010-2024 - work round race condition on
      MBX locking.  Notification from Dan Rosenberg.

